--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!--<app-signup-page></app-signup-page>
-<app-login-page></app-login-page>
-<app-home-page></app-home-page>-->
-<app-cart-page></app-cart-page>
+<router-outlet></router-outlet>
