--- a/src/app/components/shared/sub-menu/sub-menu.component.html
+++ b/src/app/components/shared/sub-menu/sub-menu.component.html
@@ -1,13 +1,14 @@
 <div class="nav-right nav-menu">
-  <a class="nav-item">Home</a>
-  <a class="nav-item">Carrinho</a>
-  <a class="nav-item">Meu Perfil</a>
+  <a class="nav-item">Bem vindo, {{ user }}</a>
+  <a class="nav-item" routerLink="/home">Home</a>
+  <a class="nav-item" routerLink="/cart">Carrinho ({{ totalItems }})</a>
+  <a class="nav-item" routerLink="/">Meu Perfil</a>
   <span class="nav-item">
-    <a class="button is-primary is-inverted">
+    <a class="button is-primary is-inverted" (click)="logout()">
         <span class="icon">
             <i class="fa fa-power-off"></i>
         </span>
-  <span>Sair</span>
+      <span>Sair</span>
   </a>
   </span>
 </div>
