--- a/src/app/pages/cart-page/cart-page.component.html
+++ b/src/app/pages/cart-page/cart-page.component.html
@@ -1,50 +1,66 @@
 <app-headbar></app-headbar>
 
 <section class="section">
-    <div class="container">
-        <div class="heading animated fadeIn">
-            <h1 class="title">Seu Carrinho</h1>
-            <h2 class="subtitle">
-                10 itens
-            </h2>
-        </div>
-        <br>
-        <table class="table is-striped">
-          <thead>
-            <tr>
-              <th class="has-text-centered">Produto</th>
-              <th class="has-text-centered">Valor</th>
-              <th class="has-text-centered">Qtde</th>
-              <th class="has-text-centered">Total</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="has-text-centered">Mouse Gamer</td>
-              <td class="has-text-centered">R$ 299.90</td>
-              <td class="has-text-centered">1</td>
-              <td class="has-text-centered"><strong>R$ 299.90</strong></td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <td colspan="3"><h3 class="title">SubTotal</h3></td>
-              <td class="has-text-centered"><strong>R$ 299.90</strong></td>              
-            </tr>
-            <tr>
-              <td colspan="3"><h3 class="title">Desconto</h3></td>
-              <td class="has-text-centered"><strong>R$ 0.00</strong></td>              
-            </tr>
-            <tr>
-              <td colspan="3"><h3 class="title">Total</h3></td>
-              <td class="has-text-centered"><strong>R$ 299.90</strong></td>              
-            </tr>
-          </tfoot>
-        </table>
-        <p class="has-text-right">
-          <button class="button is-success is-large animated pulse infinite"><i class="fa fa-check"></i>&nbsp;&nbsp;&nbsp;CHECKOUT</button>
-        </p>
+  <div class="container">
+    <div class="heading animated fadeIn">
+      <h1 class="title">Seu Carrinho</h1>
+      <h2 class="subtitle">
+        10 itens
+      </h2>
     </div>
+    <br>
+    <table class="table is-striped">
+      <thead>
+        <tr>
+          <th class="has-text-centered">Produto</th>
+          <th class="has-text-centered">Valor</th>
+          <th class="has-text-centered">Qtde</th>
+          <th class="has-text-centered">Total</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of items">
+          <td class="has-text-centered">{{ item.title }}</td>
+          <td class="has-text-centered">R$ {{ item.price | number: '1.2-2' }}</td>
+          <td class="has-text-centered">
+            <input class="input" type="number" [(ngModel)]="item.quantity" (change)="checkQuantity(item)" style="width: 60px;">
+          </td>
+          <td class="has-text-centered"><strong>R$ {{ (item.price * item.quantity) | number: '1.2-2' }}</strong></td>
+          <td class="has-text-centered"><a class="button is-small is-danger" (click)="remove(item)">Remover</a></td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="4">
+            <h3 class="title">SubTotal</h3>
+          </td>
+          <td class="has-text-centered"><strong>{{ getSubTotal() | number: '1.2-2' }}</strong></td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <h3 class="title">Desconto</h3>
+          </td>
+          <td class="has-text-centered"><strong>R$ {{ discount | number: '1.2-2' }}</strong></td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <h3 class="title">Taxa de Entrega</h3>
+          </td>
+          <td class="has-text-centered"><strong>R$ {{ deliveryFee | number: '1.2-2' }}</strong></td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <h3 class="title">Total</h3>
+          </td>
+          <td class="has-text-centered"><strong>R$ {{ getSubTotal() + deliveryFee | number: '1.2-2' }}</strong></td>
+        </tr>
+      </tfoot>
+    </table>
+    <p class="has-text-right">
+      <button (click)="checkout()" class="button is-success is-large animated pulse infinite"><i class="fa fa-check"></i>&nbsp;&nbsp;&nbsp;CHECKOUT</button>
+    </p>
+  </div>
 </section>
 
 <app-footer></app-footer>
